--- a/.github/workflows/callable-flex-update.yml
+++ b/.github/workflows/callable-flex-update.yml
@@ -44,10 +44,11 @@ jobs:
                     mkdir .github/flex-endpoint
                     git ls-tree HEAD */*/* | php .github/recipes-checker-main/run generate:flex-endpoint ${{ github.repository }} ${{ inputs.branch }} flex/main .github/flex-endpoint ${{ inputs.versions_json }} ${{ inputs.contrib && '--contrib' || '' }}
                     git switch flex/main
-                    git rm -q *.json
+                    git rm -q *.json || true
                     mv .github/flex-endpoint/*.json .
                     git add *.json
-                    cp -a .github/flex-endpoint/archived .
+                    mkdir -p archived
+                    [ -d .github/flex-endpoint/archived ] && cp -a .github/flex-endpoint/archived/* archived/ || true
                     git add archived/
                     php .github/recipes-checker-main/run generate:recipes-readme index.json ${{ inputs.contrib && '--contrib' || '' }} > RECIPES.md
                     git add RECIPES.md
