Added service config

--- a/graffish-labs/audit-logs-lib/1.0/manifest.json
+++ b/graffish-labs/audit-logs-lib/1.0/manifest.json
@@ -2,8 +2,12 @@
     "bundles": {
         "GraffishLabs\\AuditLogsLib\\GraffishLabsAuditLogsLibBundle": ["all"]
     },
+    "copy-from-recipe": {
+        "config/": "%CONFIG_DIR%/"
+    },
     "env": {
-        "AUDIT_API_KEY": "your-api-key-here"
+        "AUDIT_API_KEY": "your-api-key-here",
+        "AUDIT_LOGS_API_BASE_URL": "https://audit-logs.graffish.com/api/v1"
     },
     "aliases": [ "audit-logs" ]
 }
