--- a/graffish-labs/audit-logs-lib/1.0/config/packages/audit_logs.yaml
+++ b/graffish-labs/audit-logs-lib/1.0/config/packages/audit_logs.yaml
@@ -1,4 +1,4 @@
-graffish_labs_audit_log:
+graffish_labs_audit_logs_lib:
     enabled: true
     client:
         base_uri: '%env(AUDIT_LOGS_API_BASE_URL)%'
