--- a/graffish-labs/symfony-nats-transport/1.0/config/packages/nats_transport.yaml
+++ b/graffish-labs/symfony-nats-transport/1.0/config/packages/nats_transport.yaml
@@ -1,7 +1,9 @@
-graffish_labs_symfony_nats_transport:
+graffish_labs_nats_transport:
     enabled: true
-    GraffishLabs\SymfonyNatsTransport\Transport\NatsTransportFactory:
+    nats_transport_factory:
+        class: GraffishLabs\SymfonyNatsTransport\Transport\NatsTransportFactory
         tags: [messenger.transport_factory]
 
-    GraffishLabs\SymfonyNatsTransport\Transport\NatsTransport:
+    nats_transport:
+        class: GraffishLabs\SymfonyNatsTransport\Transport\NatsTransport
         tags: [messenger.transport]
